# confluence_bot_pub

./: .env.example  README.md  check_app_db.py  check_attachments.py  check_db.py  check_db_state.py  check_parser.py  debug_extract.py  debug_extract_v2.py  fix_cli.py  fix_cli2.py  fix_json.py  fix_parser.py  fix_parser_debug.py  fix_sync.py  parser_working.py  pyproject.toml  test_jira_parser.py
app/: __init__.py  cli.py  config.py  factory.py  logging_config.py  main.py
app/bot/: __init__.py  cli_adapter.py  http_adapter.py  ports.py  sberchat_adapter.py  service.py
app/changes/: __init__.py  diff_service.py  history_repository.py  models.py
app/confluence/: __init__.py  client.py  exceptions.py  jira_client.py  models.py  parser.py  urls.py
app/rag/: embeddings.py  indexer.py  llm.py  models.py  prompts.py  release_changes_logic.md  retriever.py  vector_store.py
app/s2t/: __init__.py  csv_parser.py  excel_parser.py  exceptions.py  html_parser.py  models.py  parser.py  parser_base.py
app/static/: index.html
app/storage/: chat_history_repository.py  document_repository.py  metadata_repository.py  page_snapshot_repository.py  s2t_state_repository.py  (+1 more)
confluence_s2t_rag_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: README.md  architecture.md  confluence-workflow.md  incremental-sync.md  operations.md  rag-and-bot.md  todo-backend.md
tests/: reproduce_issue.py  test_cli.py  test_config.py  test_confluence_client.py  test_confluence_parser.py  test_diff_service.py  test_incremental_updater.py  test_rag_retriever.py  test_s2t_parser.py
(+8 files in other folders)
